LSformElement :: jsonCompositeAttribute: fix select alignment

--- a/src/css/default/LSformElement_jsonCompositeAttribute.css
+++ b/src/css/default/LSformElement_jsonCompositeAttribute.css
@@ -49,3 +49,7 @@ div.jsonCompositeAttribute_possibleValues li:hover {
 	background-color: #CCC;
 	cursor: pointer;
 }
+
+ul.LSformElement_jsonCompositeAttribute div select {
+	margin: 2px;
+}
